--- a/index.html
+++ b/index.html
@@ -2,14 +2,42 @@
 <html>
 <head>
      <meta charset="UTF-8">
-     <title>Vladimir M test site</title>
-</head>
+	 <meta="author" content="Vladimir M">
+     <title>My site</title> <!--тайтл-->
+</head>                                  <!--Хеад-->    
 <body>
-     <h1>Добро пожаловать</h1>
-     <h2></h2>
+     <blockquote>
+              <h1>Hello, world!</h1>           <!--Первый заголовок-->  
+     </blockquote>
+	 <h2>
+	     <pre>
+		     <mark>
+
+ /\ \  __/\ \        /\ \        
+ \ \ \/\ \ \ \     __\ \ \____   
+  \ \ \ \ \ \ \  /'__`\ \ '__`\  
+   \ \ \_/ \_\ \/\  __/\ \ \_\ \ 
+    \ `\___x___/\ \____\\ \_,__/ 
+     \ /__//__/  \/____/ \/___/  
+</mark>
+		 </pre> 
+	 </h2>
+	 
 	 
 	 <div>
-              <h2><a href="#">Тест заголовка</h2>
+     <h2><a href="">Резюме</h2>
      </div>
 </body>
+
+
+<!-- Зделать как нибудь потом адаптивным при помощи site-menu	{ 
+	 float: none
+	 width: 100%
+	 }
+	 .site-content	{ 
+	 width: 70%
+	 }
+	 .site-ads	{ 
+	 width: 30%
+	 } -->
 </html>
