--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <meta charset="UTF-8">
+     <meta charset="UTM-8">
 	 <meta="author" content="Vladimir M">
      <title>My site</title> <!--тайтл-->
+	 <link rel="stylesheet" href="css/style.css">
 </head>                                  <!--Хеад-->    
-<body>
-     <blockquote>
-              <h1>Hello, world!</h1>           <!--Первый заголовок-->  
-     </blockquote>
+<body>     
+     	 
+	        <h1>Hello, world!</h1>           <!--Первый заголовок-->  
 	 <h2>
 	     <pre>
-		     <mark>
+		     <!---- <mark>
 
  /\ \  __/\ \        /\ \        
  \ \ \/\ \ \ \     __\ \ \____   
@@ -19,14 +19,13 @@
    \ \ \_/ \_\ \/\  __/\ \ \_\ \ 
     \ `\___x___/\ \____\\ \_,__/ 
      \ /__//__/  \/____/ \/___/  
-</mark>
-		 </pre> 
-	 </h2>
-	 
+</mark> --->
+		</pre> 
+	</h2>
 	 
 	 <div>
-     <h2><a href="">Резюме</h2>
-     </div>
+         <h2><a href="https://rabota.ua/cv/11519400">Резюме</h2>
+              </div>
 </body>
 
 
@@ -40,4 +39,6 @@
 	 .site-ads	{ 
 	 width: 30%
 	 } -->
+	 
+	 <a href="http://ping-admin.ru/free_uptime/stat/4707ef9048d066e73e917ae9e3924d6510235.html" target="_blank"><img src="//images.ping-admin.ru/i/free_uptime/1e716b2d93aa00e1d3bf885e41e7dd9e10235_11.gif" width="88" height="15" border="0" alt="проверка сайта на доступность"></a>
 </html>
