--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</h2>
 	 
 	 <div>
-         <h2><a href="https://rabota.ua/cv/11519400">Резюме</h2>
+         <h2><a href="#">Резюме</h2>
               </div>
 </body>
 
