--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
      <meta charset="UTM-8">
 	 <meta="author" content="Vladimir M">
-     <title>My site</title> <!--тайтл-->
+     <title>GitHub Pages site</title> <!--тайтл-->
 	 <link rel="stylesheet" href="css/style.css">
 </head>                                  <!--Хеад-->    
 <body>     
@@ -13,12 +13,7 @@
 	     <pre>
 		     <!---- <mark>
 
- /\ \  __/\ \        /\ \        
- \ \ \/\ \ \ \     __\ \ \____   
-  \ \ \ \ \ \ \  /'__`\ \ '__`\  
-   \ \ \_/ \_\ \/\  __/\ \ \_\ \ 
-    \ `\___x___/\ \____\\ \_,__/ 
-     \ /__//__/  \/____/ \/___/  
+
 </mark> --->
 		</pre> 
 	</h2>
@@ -29,7 +24,8 @@
 </body>
 
 
-<!-- Зделать как нибудь потом адаптивным при помощи site-menu	{ 
+<!--  
+	site-menu	{ 
 	 float: none
 	 width: 100%
 	 }
@@ -38,7 +34,8 @@
 	 }
 	 .site-ads	{ 
 	 width: 30%
-	 } -->
+	 } 
+-->
 	 
 	 <a href="http://ping-admin.ru/free_uptime/stat/4707ef9048d066e73e917ae9e3924d6510235.html" target="_blank"><img src="//images.ping-admin.ru/i/free_uptime/1e716b2d93aa00e1d3bf885e41e7dd9e10235_11.gif" width="88" height="15" border="0" alt="проверка сайта на доступность"></a>
 </html>
