--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
      <meta charset="UTM-8">
 	 <meta="author" content="Vladimir M">
      <title>GitHub Pages site</title> <!--тайтл-->
-	 <link rel="stylesheet" href="css/style.css">
-</head>                                  <!--Хеад-->    
+	 
+</head>                                  
 <body>     
      	 
 	        <h1>Hello, world!</h1>           <!--Первый заголовок-->  
@@ -21,6 +21,7 @@
 	 <div>
          <h2><a href="#">Резюме</h2>
               </div>
+<link rel="stylesheet" href="css/style.css">
 </body>
 
 
