--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	 <div>
          <h2><a href="#">Резюме</h2>
               </div>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="/css/style.css">
 </body>
 
 
