--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <meta charset="UTM-8">
-	 <meta="author" content="Vladimir M">
-     <title>GitHub Pages site</title> <!--тайтл-->
-	 
+	<meta charset="UTM-8">
+	<meta="author" content="Vladimir M">
+	<title>GitHub Pages site</title>
+	<link rel="stylesheet" href="css/style.css"> 
 </head>                                  
 <body>     
      	 
@@ -21,7 +21,7 @@
 	 <div>
          <h2><a href="#">Резюме</h2>
               </div>
-<link rel="stylesheet" href="/css/style.css">
+
 </body>
 
 
