--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 	<meta charset="UTM-8">
 	<meta="author" content="Vladimir M">
@@ -24,19 +24,6 @@
 
 </body>
 
-
-<!--  
-	site-menu	{ 
-	 float: none
-	 width: 100%
-	 }
-	 .site-content	{ 
-	 width: 70%
-	 }
-	 .site-ads	{ 
-	 width: 30%
-	 } 
--->
 	 
 	 <a href="http://ping-admin.ru/free_uptime/stat/4707ef9048d066e73e917ae9e3924d6510235.html" target="_blank"><img src="//images.ping-admin.ru/i/free_uptime/1e716b2d93aa00e1d3bf885e41e7dd9e10235_11.gif" width="88" height="15" border="0" alt="проверка сайта на доступность"></a>
 </html>
