--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTM-8">
 	<meta="author" content="Vladimir M">
 	<title>GitHub Pages site</title>
-	<link type="text/css" rel="stylesheet" href="css/style.css">
+	<link type="text/css" rel="stylesheet" href="https://vladimirseoadv.github.io/style.css">
 </head>                                  
 <body>     
      	 
