--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTM-8">
 	<meta="author" content="Vladimir M">
-	<title>GitHub Pages site</title>
-	<link type="text/css" rel="stylesheet" href="https://vladimirseoadv.github.io/style.css">
-</head>                                  
-<body>     
-     	 
-	        <h1>Hello, world!</h1>           <!--Первый заголовок-->  
-	 <h2>
-	     <pre>
-		     <!---- <mark>
+		<title>GitHub Pages site</title>
+		<link type="text/css" rel="stylesheet" href="/css/style.css">
+</head>
 
-
-</mark> --->
-		</pre> 
-	</h2>
-	 
-	 <div>
-         <h2><a href="#">Резюме</h2>
-              </div>
-
+<body>
+	<header>
+		<menu>
+			<div class="links">
+				<div class="link1"></div>
+				<div class="link2"></div>
+				<div class="link3"></div>
+				<div class="link4"></div>
+			</div>
+		</menu>
+	</header>
+	<h1>Hello, world!</h1>
 </body>
 
-	 
-	 <a href="http://ping-admin.ru/free_uptime/stat/4707ef9048d066e73e917ae9e3924d6510235.html" target="_blank"><img src="//images.ping-admin.ru/i/free_uptime/1e716b2d93aa00e1d3bf885e41e7dd9e10235_11.gif" width="88" height="15" border="0" alt="проверка сайта на доступность"></a>
+
+<a href="http://ping-admin.ru/free_uptime/stat/4707ef9048d066e73e917ae9e3924d6510235.html" target="_blank"><img
+		src="//images.ping-admin.ru/i/free_uptime/1e716b2d93aa00e1d3bf885e41e7dd9e10235_11.gif" width="88" height="15"
+		border="0" alt="проверка сайта на доступность"></a>
+
 </html>
