--- a/index.html
+++ b/index.html
@@ -6,16 +6,36 @@
 	<meta="author" content="Vladimir M">
 		<title>GitHub Pages site</title>
 		<link type="text/css" rel="stylesheet" href="/css/style.css">
+		<script src="/js/main.js"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171067608-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() { dataLayer.push(arguments); }
+			gtag('js', new Date());
+
+			gtag('config', 'UA-171067608-1');
+		</script>
+
 </head>
 
 <body>
 	<header>
 		<menu>
 			<div class="links">
-				<div class="link1"></div>
-				<div class="link2"></div>
-				<div class="link3"></div>
-				<div class="link4"></div>
+				<div class="link1">
+					<a href="#">Ссылка 1
+					</a>
+				</div>
+				<div class="link2">
+					<a href="#">Ссылка 2</a>
+				</div>
+				<div class="link3">
+					<a href="#">Ссылка 3</a>
+				</div>
+				<div class="link4">
+					<a href="#">Ссылка 4</a>
+				</div>
 			</div>
 		</menu>
 	</header>
