--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<meta charset="UTM-8">
+	<meta charset="utf 8">
 	<meta="author" content="Vladimir M">
 		<title>GitHub Pages site</title>
 		<link type="text/css" rel="stylesheet" href="/css/style.css">
