--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 			window.dataLayer = window.dataLayer || [];
 			function gtag() { dataLayer.push(arguments); }
 			gtag('js', new Date());
-
 			gtag('config', 'UA-171067608-1');
 		</script>
-
+		<!-- Global site tag (gtag.js) - Google Analytics -->
 </head>
 
 <body>
