--- a/index.html
+++ b/index.html
@@ -19,31 +19,54 @@
 		<!--Botstrap-start-->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 			integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-		<!-- JS, Popper.js, and jQuery -->
-		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-			crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-			crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-			integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-			crossorigin="anonymous"></script>
 		<!--Botstrap-ent-->
 </head>
 
 <body>
-	<header>
-		<div class="container">
-			<h2>Rwraas</h2>
+	<nav class="navbar navbar-expend-lg navbar-dark bg-dark">
+		<a href="" class="navbar-brand">
+			<img src="https://cdn.worldvectorlogo.com/logos/bootstrap-icon.svg" width="30" height="30" alt="logo">
+		</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-support">
+			<span class="navbar-toggler-icon"></span>
 
-
-		</div>
-	</header>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item active">
+				<a href="#" class="nav-link">Home</a>
+			</li>
+			<li class="nav-item">
+				<a href="#" class="nav-link">Price</a>
+			</li>
+			<li class="nav-item">
+				<a href="#" class="nav-link">Portfolio/a>
+			</li>
+			<li class="nav-item">
+				<a href="#" class="nav-link">About us</a>
+			</li>
+		</ul>
+		<form class="form-inline my-2 my-lg-0">
+			<input type="text" class="form-control mr-sm-2" placeholder="Search" arial label="Search">
+		</form>
+	</nav>
 
 </body>
 
-
+<div class="bootstrap">
+	<!--Botstrap-ent-start-->
+	<!-- JS, Popper.js, and jQuery -->
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+		crossorigin="anonymous"></script>
+	<!--Botstrap-ent-->
+</div>
 <a href="http://ping-admin.ru/free_uptime/stat/4707ef9048d066e73e917ae9e3924d6510235.html" target="_blank"><img
 		src="//images.ping-admin.ru/i/free_uptime/1e716b2d93aa00e1d3bf885e41e7dd9e10235_11.gif" width="88" height="15"
 		border="0" alt="проверка сайта на доступность"></a>
