--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<a href="#" class="nav-link">Price</a>
 			</li>
 			<li class="nav-item">
-				<a href="#" class="nav-link">Portfolio/a>
+				<a href="#" class="nav-link">Portfolio</a>
 			</li>
 			<li class="nav-item">
 				<a href="#" class="nav-link">About us</a>
