--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf 8">
 	<meta="author" content="Vladimir M">
 		<title>GitHub Pages site</title>
-		<link type="text/css" rel="stylesheet" href="/css/style.css">
+
 		<script src="/js/main.js"></script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171067608-1"></script>
@@ -19,37 +19,83 @@
 		<!--Botstrap-start-->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 			integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+		<link type="text/css" rel="stylesheet" href="/css/style.css">
 		<!--Botstrap-ent-->
 </head>
 
 <body>
-	<nav class="navbar navbar-expend-lg navbar-dark bg-dark">
-		<a href="" class="navbar-brand">
-			<img src="https://cdn.worldvectorlogo.com/logos/bootstrap-icon.svg" width="30" height="30" alt="logo">
-		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-support">
-			<span class="navbar-toggler-icon"></span>
+	<div class="main container">
+		<nav class="navbar navbar-expand-md navbar-light bg-light">
+			<a class="navbar-brand" href="#">Navbar</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
-		</button>
-		<div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item active">
-				<a href="#" class="nav-link">Home</a>
-			</li>
-			<li class="nav-item">
-				<a href="#" class="nav-link">Price</a>
-			</li>
-			<li class="nav-item">
-				<a href="#" class="nav-link">Portfolio</a>
-			</li>
-			<li class="nav-item">
-				<a href="#" class="nav-link">About us</a>
-			</li>
-		</ul>
-		<form class="form-inline my-2 my-lg-0">
-			<input type="text" class="form-control mr-sm-2" placeholder="Search" arial label="Search">
-		</form>
-	</nav>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+							aria-haspopup="true" aria-expanded="false">
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="#">Action</a>
+							<a class="dropdown-item" href="#">Another action</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">Something else here</a>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link disabled" href="#">Disabled</a>
+					</li>
+				</ul>
+				<form class="form-inline my-2 my-lg-0">
+					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				</form>
+			</div>
+		</nav>
+		<div class="myslider">
+			<div class="container-fluid">
+				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img src="https://wallpapershome.ru/images/wallpapers/poligon-2560x1440-4k-hd-3d-fon-241.jpg"
+								class="d-block w-100" alt="...">
+						</div>
+						<div class="carousel-item">
+							<img src="https://wallpapershome.ru/images/wallpapers/les-3840x2160-5k-4k-tuman-orel-oboi-3441.jpg"
+								class="d-block w-100" alt="...">
+						</div>
+						<div class="carousel-item">
+							<img src="https://images3.alphacoders.com/954/954241.jpg" class="d-block w-100" alt="...">
+						</div>
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+				<a href="http://ping-admin.ru/free_uptime/stat/4707ef9048d066e73e917ae9e3924d6510235.html"
+					target="_blank"><img
+						src="//images.ping-admin.ru/i/free_uptime/1e716b2d93aa00e1d3bf885e41e7dd9e10235_11.gif" width="88"
+						height="15" border="0" alt="проверка сайта на доступность"></a>
+			</div>
+			<span>Текст</span>
+		</div>
+	</div>
+
+
 
 </body>
 
@@ -67,8 +113,6 @@
 		crossorigin="anonymous"></script>
 	<!--Botstrap-ent-->
 </div>
-<a href="http://ping-admin.ru/free_uptime/stat/4707ef9048d066e73e917ae9e3924d6510235.html" target="_blank"><img
-		src="//images.ping-admin.ru/i/free_uptime/1e716b2d93aa00e1d3bf885e41e7dd9e10235_11.gif" width="88" height="15"
-		border="0" alt="проверка сайта на доступность"></a>
+
 
 </html>
